[gd_scene load_steps=6 format=3 uid="uid://cskmxcs4vod53"]

[ext_resource type="Script" uid="uid://d0avtxpn362cy" path="res://scripts/RewardRoll/RollReward.gd" id="1_2forr"]
[ext_resource type="Script" uid="uid://jc4aipb28svq" path="res://scripts/RewardRoll/RollRewardButton.gd" id="2_e5wsf"]
[ext_resource type="Script" uid="uid://dl2sat4xhk5uf" path="res://scripts/RewardRoll/RewardRollContinue.gd" id="3_c7gvv"]
[ext_resource type="PackedScene" uid="uid://dupfms6m2gsoy" path="res://scenes/DebugScene.tscn" id="5_wl02m"]
[ext_resource type="PackedScene" uid="uid://dbtd6w07pf5p5" path="res://scenes/DiceGridScene.tscn" id="8_dl1t1"]

[node name="RollReward" type="Control" groups=["SceneRoot"]]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_2forr")

[node name="DiceGridControl" parent="." instance=ExtResource("8_dl1t1")]
layout_mode = 1

[node name="ResultStakesText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333333
anchor_top = 0.654321
anchor_right = 0.666667
anchor_bottom = 0.691358
offset_top = -3.05176e-05
text = "Rewards you will be playing for this round:"
metadata/_edit_use_anchors_ = true

[node name="ResultGridScroll" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.263889
anchor_top = 0.691358
anchor_right = 0.916667
anchor_bottom = 0.938272
vertical_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="ResultGrid" type="GridContainer" parent="ResultGridScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="DiceGridLabel" type="RichTextLabel" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.012
anchor_right = 0.5
anchor_bottom = 0.049
offset_top = 0.224
offset_right = 448.0
offset_bottom = 0.248001
mouse_filter = 1
text = "Reward Dice:"

[node name="Roll" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.0277778
anchor_top = 0.740741
anchor_right = 0.25
anchor_bottom = 0.938272
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Roll Reward Dice"
script = ExtResource("2_e5wsf")
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0277778
anchor_top = 0.740741
anchor_right = 0.25
anchor_bottom = 0.938272
text = "Continue"
script = ExtResource("3_c7gvv")
metadata/_edit_use_anchors_ = true

[node name="DebugControls" parent="." instance=ExtResource("5_wl02m")]
layout_mode = 1
mouse_filter = 2
